(update) add browser and jquery environments to lint config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,9 @@
     "installedESLint": true,
     "plugins": [
         "react"
-    ]
+    ],
+    "env": {
+        "browser": true,
+        "jquery": true
+    }
 }
